# hemi

./: CMakeLists.txt  Hemi.cmake  README.md
examples/blackscholes/: CMakeLists.txt
examples/simple/: Makefile
hemi/: configure.h  device_api.h  execution_policy.h  hemi.h
test/: Makefile  test_execution_policy.cpp
